--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,12 @@ pydantic==2.10.4
 pydantic_core==2.27.2
 PyPDF2==3.0.1
 python-docx==1.1.2
+python-dotenv==1.0.1
 Quart==0.19.9
+quart-cors==0.7.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
 Werkzeug==3.1.3
 wsproto==1.2.0
+
